# prof-cast

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  Makefile  README.md  cbindgen.toml  clippy.toml  deny.toml  justfile  test.speedscope.json
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: audit.yml  ci.yml  fuzz.yml  release.yml
crates/profcast-capture/: Cargo.toml
crates/profcast-capture/src/: lib.rs
crates/profcast-capture/src/linux/: launch.rs  mod.rs  perf.rs  symbolize.rs
crates/profcast-capture/src/windows/: launch.rs  mod.rs  sample.rs  symbolize.rs
crates/profcast-cli/: Cargo.toml
crates/profcast-cli/src/: main.rs
crates/profcast-cli/tests/: cli.rs
crates/profcast-core/: Cargo.toml
crates/profcast-core/src/: capture.rs  error.rs  format.rs  lib.rs  model.rs
crates/profcast-ffi/: Cargo.toml
crates/profcast-ffi/src/: lib.rs
crates/profcast-formats/: Cargo.toml
crates/profcast-formats/src/: chrometrace.rs  folded.rs  json.rs  lib.rs  registry.rs  speedscope.rs
crates/profcast-formats/src/pprof/: mod.rs  proto.gen.rs
examples/: CMakeLists.txt  README.md  bs4_scrape.folded  bs4_scrape_workload.py  cpp_workload.cpp  justfile
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: c_api.rs  chrometrace_probe.rs  chrometrace_read.rs  folded_probe.rs  folded_read.rs  pprof_probe.rs  pprof_read.rs
fuzz/src/: lib.rs
include/: profcast.h
