[workspace]
resolver = "3"
members = [
    "crates/profcast-cli",
    "crates/profcast-core",
    "crates/profcast-ffi",
    "crates/profcast-formats",
]

# The fuzz crate is its own cargo-fuzz workspace; it pulls in nightly-only
# sanitizer flags and must not be built as part of the normal workspace.
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/N-Adkins/profcast"
homepage = "https://github.com/N-Adkins/profcast"
readme = "README.md"
keywords = ["profiling", "pprof", "perf", "observability"]
categories = ["development-tools::profiling", "command-line-utilities"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = { version = "1", default-features = false, features = ["std"] }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"
unreachable_pub = "warn"
missing_docs = "warn"
future_incompatible = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
unused = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
bare_urls = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
missing_safety_doc = "deny"

unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
indexing_slicing = "warn"
integer_division = "warn"
string_slice = "warn"
lossy_float_literal = "warn"

must_use_candidate = "warn"
return_self_not_must_use = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

module_name_repetitions = "allow"
similar_names = "allow"
too_many_lines = "allow"
too_many_arguments = "allow"
struct_excessive_bools = "allow"
missing_const_for_fn = "allow"
implicit_hasher = "allow"

multiple_crate_versions = "allow"
