[package]
name = "profcast-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "C ABI bindings for profcast"

[lints]
workspace = true

[lib]
name = "profcast_ffi"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
serde_json.workspace = true
profcast-core = { path = "../profcast-core" }
profcast-formats = { path = "../profcast-formats" }

[dev-dependencies]
anyhow.workspace = true
