[package]
name = "profcast-formats"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Format specifications for different profiler output schemes"

[lints]
workspace = true

[dependencies]
tracing.workspace = true
profcast-core = { path = "../profcast-core" }
