[package]
name = "profcast-formats"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Format specifications for different profiler output schemes"

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
prost.workspace = true
flate2.workspace = true
profcast-core = { path = "../profcast-core" }
